--- a/formularioEstudiante.html
+++ b/formularioEstudiante.html
@@ -13,7 +13,7 @@
         <li><a href="formularioEstudiante.html">Estudiantes</a></li>
         <li><a href="FormulariDdocente.html">Docentes</a></li>
 	</ul>
-
+<div aling="left">
 	<div class="container">
 		<div class="form__top">
 			<h2>Formulario   <span>de Estudiantes</span></h2>
@@ -30,6 +30,6 @@
             </div>
 		</form>
 	</div>
-	
+	</div>
 </body>
 </html>
