--- a/formularioEstudiante.html
+++ b/formularioEstudiante.html
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" href="estiloEstudiante.css">
 	<title>Formulario Estudiante</title>
 </head>
-<div aling="left">
 <body>
 	
 	<ul>
@@ -15,7 +14,7 @@
         <li><a href="FormulariDdocente.html">Docentes</a></li>
 	</ul>
 
-	<div class="container">
+	<div aling = "left" class="container">
 		<div class="form__top">
 			<h2>Formulario   <span>de Estudiantes</span></h2>
 		</div>		
@@ -31,6 +30,6 @@
             </div>
 		</form>
 	</div>
-	</div>
+	
 </body>
 </html>
