--- a/formularioEstudiante.html
+++ b/formularioEstudiante.html
@@ -14,7 +14,7 @@
         <li><a href="FormulariDdocente.html">Docentes</a></li>
 	</ul>
 
-	<div aling = "left" class="container">
+	<div class="container">
 		<div class="form__top">
 			<h2>Formulario   <span>de Estudiantes</span></h2>
 		</div>		
